--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start:run": "nodemon .dist/app.js",
@@ -21,9 +22,21 @@
   },
   "homepage": "https://github.com/ballyalley-o/bobbi-server#readme",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cookie-session": "^2.0.48",
+    "@types/express": "^4.17.21",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.1",
     "nodemon": "^3.0.3",
     "tsc-alias": "^1.8.8",
     "typedoc": "^0.25.7"
+  },
+  "dependencies": {
+    "@types/node": "^20.11.13",
+    "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
+    "cookie-session": "^2.1.0",
+    "express": "^4.18.2"
   }
 }
