--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "cookie-session": "^2.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "reflect-metadata": "^0.2.1"
   }
 }
