Add src/app-router.bak to tsconfig include

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     }
   },
 
-  "include": ["**/*.ts", "**/*.js"],
+  "include": ["**/*.ts", "**/*.js", "src/app-router.bak"],
   "exclude": ["node_modules"]
 }
